hopeful fix for header-bg not displaying correctly on mobile

--- a/css/main.comp.css
+++ b/css/main.comp.css
@@ -4859,7 +4859,8 @@ p {
   /* Above 1920px */
   background-size: cover;
   background-position: center;
-  background-attachment: fixed; }
+  background-attachment: fixed;
+  background-repeat: no-repeat; }
   @media only screen and (min-resolution: 192dpi) {
     .header {
       background-image: linear-gradient(to right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("/img/bg/header-bg-md.jpg"); } }
