--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -46,6 +46,7 @@
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
+  background-repeat: no-repeat;
 
   &__content {
     display: flex;
